 *
 *   You should have received a copy of the GNU General Public License
 *   along with this program; if not, write to the Free Software
 *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */

I started this file to keep track of changes made in hybrid-6,
beginning with b37.  We are in VERY HIGH SPEED development mode,
so it's important to keep track of this. =)
	
version hybrid-6-b43    24-Jan-1999
* reworked io_loop dropping CPU load significantly, this is still something 
  that needs to be looked at.
* allow stats p even if LTRACE is defined, its habit for users even if
  it is redundant.
* I liked WINTRHAWK RPL_TRACESERVER report, so thats now the default.
* Added a test in DEBUGMODE to ensure fd == 2 was never read. This
  won't happen with select() read, but can if read_messages is
  called directly. Might as well be paranoid about it now. This one
  caused ircd to abort when compiled with DEBUGMODE in b42
-Dianora
	
version hybrid-6-b42    24-Jan-1999
* removed [IP] being sent in CONNECT in connect burst
* removed [IP] if seen in m_links from prying eyes of users
-Dianora
	
version hybrid-6-b41    23-Jan-1999
* removed USERNAMES_IN_TRACE default is always on now
* get_client_name() will default to sptr->username if sptr->user->username
  is null
* made config.h/config.h.dist consistent again, went back to stock defaults
-Dianora
	
version hybrid-6-b40    21-Jan-1999
* redid m_invite for better sanity testing, you can no longer
  invite users to a non-existent channel for example.
* Don't send SJOIN's for zero length MODE_SPLIT channels (Mortiis)
* redid m_sjoin for MODE_SPLIT channels treat it as a brand new channel
* fixed broken NO_JOIN_ON_SPLIT to only care about channels that had
  existed before a split

-Dianora

version hybrid-6-b39	20-Jan-1999
* sanity test m_gline parc argument count, older hybrid-5 servers
  with buggy GLINE can core new hybrid-6 correct GLINE code 
* Forward the GLINE even if GLINE is not defined on this server.